Fixed Window content size 100% but some content is not visible #182

--- a/src/main/resources/gwt/material/design/addins/client/window/resources/css/window.css
+++ b/src/main/resources/gwt/material/design/addins/client/window/resources/css/window.css
@@ -73,8 +73,8 @@
 
 .window .content {
     background-color: #fafafa;
-    width: 100%;
-    height: 100%;
+    height: calc(100% - 40px);
+    overflow: auto;
 }
 
 @media only screen and (max-width: 992px) {
